# bataille_navale

./: .gitignore  AnimatedBackground.cpp  AnimatedBackground.h  AnimatedEntity.cpp  AnimatedEntity.h  Application.cpp  Application.h  BattleshipCore.cpp  BattleshipCore.h  BattleshipServer.cpp  BattleshipServer.h  Boat.cpp  Boat.h  BsBDD.cpp  BsBDD.h  CMakeLists.txt  CloudManager.h  CoreGame.cpp  CoreGame.h  CursorCellSelector.cpp  CursorCellSelector.h  EndPanel.cpp  EndPanel.h  Entity.h  EntityCircle.cpp  EntityCircle.h  EntityRectangle.cpp  EntityRectangle.h  EntityText.cpp  EntityText.h  EntityTextBox.cpp  EntityTextBox.h  GameChat.cpp  GameChat.h  GameInfoPanel.cpp  GameInfoPanel.h  GameSessionState.h  GameVfx.cpp  GameVfx.h  GameWindow.cpp  (+46 more)
BDD Notes/: peuplemnt.txt  table.txt
SFML-2.5.1/include/SFML/: Graphics.hpp
include/: AnimatedEntity.h  Application.h  BattleshipCore.h  BattleshipServer.h  Boat.h  Entity.h  EntityTextBox.h  GameInfoPanel.h  GameMessage.h  GameWindow.h  Grid.h  LockerWindow.h  LoginMenu.h  MenuButtonsManager.h  MenuWindow.h  PlayerBoatsManager.h  SessionManager.h  Settings.h  SfmlWindow.h  SfxManager.h  TCPClient.h  TCPServer.h  TCPWinsocksMaster.h  WaitTimer.h
localization/: eng.json  fr.json
ressources/: ui_menu_playbutton.psd  ui_victory_defeat.psd
ressources/boats/: Bateaux a telecharger.txt
src/: Application.cpp  BattleshipServer.cpp  Boat.cpp  BsBDD.cpp  CloudManager.cpp  CursorCellSelector.cpp  EndPanel.cpp  EntityRectangle.cpp  GameChat.cpp  GameMessage.cpp  GameSessionState.cpp  GameWindow.cpp  Grid.cpp  Localization.cpp  LockerWindow.cpp  LoginMenu.cpp  MenuWindow.cpp  PlayerBoatsManager.cpp  PlayerHud.cpp  SaveData.cpp  SessionManager.cpp  SfmlWindow.cpp  TCPClient.cpp  TCPServer.cpp  TCPWinsocksMaster.cpp  main.cpp  sfxManager.cpp
